--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -23,7 +23,7 @@
 
 .drop-down-menu {
     background-color: #fff;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     height: 95%;
 }
 
@@ -53,6 +53,10 @@
 .link-name {
     max-width: 500px;
     margin: 0px auto;
+}
+
+.link-name a {
+    color: black;
 }
 
 @media only screen and (min-width: 1025px) {
