--- a/src/app/todo-app/todo-app.component.css
+++ b/src/app/todo-app/todo-app.component.css
@@ -18,9 +18,31 @@ button {
     margin-top: 15px;
 }
 
+.todo-groups-container {
+    max-width: 500px;
+    margin: 0px auto;
+}
+
+.popup-bottom-container {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    width: 100%;
+    top: 65px;
+}
+
+.popup-bottom-container i {
+    font-size: 20px;
+}
+
 @media only screen and (min-width: 768px) {
     .todo-container {
         min-height: 880px;
+    }
+
+    .popup-bottom-container {
+        max-width: 400px;
+        right: 0;
     }
 }
 
