--- a/src/app/todo-app/todo-app.component.css
+++ b/src/app/todo-app/todo-app.component.css
@@ -35,6 +35,14 @@ button {
     font-size: 20px;
 }
 
+.group span:hover {
+    cursor: pointer;
+}
+
+.far:hover {
+    cursor: pointer;
+}
+
 @media only screen and (min-width: 768px) {
     .todo-container {
         min-height: 880px;
