--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,10 @@
 <section class="login-container">
     <h4 class="p-3"><i class="fas fa-sign-in-alt mr-2"></i>Login</h4>
     <div class="button-container  d-flex justify-content-center align-items-center">
-        <span class="btn" *ngIf="!isLoggedIn">
-            <img src="../../assets/btn_google_signin_light_normal_web.png" alt="" (click)="signInWithGoogle()">
-        </span>
+        <h3>Sign In</h3>
+        <i class="btn" *ngIf="!isLoggedIn" (click)="signInWithGoogle()">
+            <img src="../../assets/btn_google_signin_light_normal_web.png" alt="">
+        </i>
         <button class="btn signout-button" *ngIf="isLoggedIn" (click)="signOut()">Sign Out</button>
     </div>
 </section>
