--- a/src/app/todo-app/todo/todo.component.html
+++ b/src/app/todo-app/todo/todo.component.html
@@ -2,7 +2,7 @@
     <h2 class="p-2"><i class="fas fa-list-ul mr-2"></i>Todo List</h2>
     <h3 class="p-2" routerLink="/todo"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Groups</h3>
     <div class="form-container">
-        <h3 class="ml-4 mt-3">Add Todo</h3>
+        <h3 class="ml-4 mt-3">Add Todo To "{{ group }}"</h3>
         <form class="container d-flex flex-row justify-content-around align-items-center" [formGroup]="todoForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="groupName">Todo Name</label>
@@ -18,9 +18,9 @@
             <li class="list-group-item" *ngFor="let item of todoItems; let i = index;">
                 <div class="d-flex flex-row align-items-center">
                     <input type="checkbox" class="checkbox mr-2" (click)="completeTodo(i, item)">
-                    <span class="flex-grow-1 mt-1">{{ item }}</span>
+                    <span class="flex-grow-1 mt-1">{{ item.todoItem }}</span>
                     <i class="far fa-edit m-2" (click)="edit(item, i)"></i>
-                    <i class="far fa-trash-alt m-2" (click)="delete(i)"></i>
+                    <i class="far fa-trash-alt m-2" (click)="delete(item.id, i)"></i>
                 </div>
             </li>
         </ul>
