Fixed layout issues. Corrected layout overlay todo component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
                 <div class="left-container">
                     <h3 class="mt-5"><i class="fas fa-user mr-2"></i>About Me</h3>
                     <p>
-                        I love programming, traveling, lifting weights and hanging with my kids and wife.
+                        I love programming, traveling, lifting weights and hanging with my wife and kids.
                         While I have spent most my life working in the DME field, since 2002, I've always
                         had a passion for programming and spend most my free time developing and learning new
                         skills. I've worked on several projects mostly custom code for platforms like
@@ -63,16 +63,18 @@
                 <h3 class="mt-5"><i class="fas fa-code mr-2"></i>Engineering Skills</h3>
                 <p>
                     <strong>I specialize in applications built with Angular.</strong>
-                    Recently I've developed a Rest API using .Net Core and currently building out
-                    the frontend using <span>Angular</span> and <span>TypeScript</span>.
+                    <!-- Recently I've developed a Rest API using .Net Core and currently building out
+                    the frontend using <span>Angular</span> and <span>TypeScript</span>. -->
                 </p>
                 <p>
-                    I have written all of the code and designed this website which is hosted on
-                    BlueHost. 
+                    I have custom built and written every line of code for this website. I'm also in
+                    the process of developing the backend which will be hosted on Azure.
                 </p>
                 <p>Technologies used include:</p>
                 <ul>
                     <li>Angular: TypeScript / JavaScript</li>
+                    <li>ASP.Net Core for backend REST API</li>
+                    <li>Azure to host backend</li>
                     <li>Ng2-Charts / Chart.js used for the COVID graphs</li>
                     <li>EmailJS for the contact form</li>
                     <li>Google Auth to sign in to the dashboard</li>
