--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-navbar></app-navbar>
+<div class="main-container d-flex flex-column">
+    <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+    <div class="router flex-grow-1">
+        <router-outlet></router-outlet>
+    </div>
 
-<app-footer></app-footer>
+    <app-footer></app-footer>
+</div>
