Backend up and running. All seems to working. Fixed issues with view in todoapp component not showing correctly.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,8 +67,8 @@
                     the frontend using <span>Angular</span> and <span>TypeScript</span>. -->
                 </p>
                 <p>
-                    I have custom built and written every line of code for this website. I'm also in
-                    the process of developing the backend which will be hosted on Azure.
+                    I have custom built and written every line of code for this website. Including
+                    the backend which is hosted on Azure.
                 </p>
                 <p>Technologies used include:</p>
                 <ul>
