--- a/src/app/todo-app/todo-app.component.html
+++ b/src/app/todo-app/todo-app.component.html
@@ -44,7 +44,7 @@
             <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i>
             <div>
                 <h3>You're signed in!</h3>
-                <p>Backend hasn't been implemented yet. You will not be able to save your data at this time.</p>
+                <p>Backend has been implemented. There still may be errors.</p>
             </div>
         </div>
     </div>
