--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="login-container">
-    <h4 class="p-3"><i class="fas fa-sign-in-alt mr-2"></i>Login</h4>
-    <div class="button-container  d-flex justify-content-center align-items-center">
-        <h3>Sign In</h3>
+    <h2 class="p-3"><i class="fas fa-sign-in-alt mr-2"></i>{{ isLoggedIn ? 'Log Out' : 'Login' }}</h2>
+    <div class="button-container  d-flex flex-column justify-content-center align-items-center">
+        <h3>Sign in with your google accout!</h3>
         <i class="btn" *ngIf="!isLoggedIn" (click)="signInWithGoogle()">
             <img src="../../assets/btn_google_signin_light_normal_web.png" alt="">
         </i>
