Started new app CRM. Created CRM-App comp and details comp. Need to add task details component and start backend.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -62,6 +62,9 @@
                         <li class="list-group-item" routerLink="/todo" (click)="toggleMenu()" (click)="toggleMore('projects')">
                             To-Do
                         </li>
+                        <li class="list-group-item" routerLink="/crm" (click)="toggleMenu()" (click)="toggleMore('projects')">
+                            CRM
+                        </li>
                     </ul>
                 </div>
                 <li class="list-group-item d-flex" (click)="toggleMore('tutorials')">
@@ -155,6 +158,9 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item" routerLink="todo">
                             To-Do
+                        </li>
+                        <li class="list-group-item" routerLink="crm">
+                            CRM
                         </li>
                     </ul>
                 </div>
