Changed crm layout and addnewcontact functions to popup using the edit form. Added search that appears when there are more than 10 contacts.

--- a/src/app/crm-app/contact-details/contact-details.component.html
+++ b/src/app/crm-app/contact-details/contact-details.component.html
@@ -19,7 +19,7 @@
             <button type="submit" class="btn">Submit</button>
         </form>
     </div>
-    <div class="task-container">
+    <div class="task-container p-2">
         <h3 class="ml-4 mt-3">Tasks</h3>
         <ul class="list-group list-group-flush" *ngIf="tasks.length > 0">
             <li class="list-group-item" *ngFor="let t of tasks; let i = index">
