--- a/src/app/crm-app/crm-app.component.css
+++ b/src/app/crm-app/crm-app.component.css
@@ -21,10 +21,14 @@ h2 {
     cursor: pointer;
 }
 
+.fa-plus-square {
+    color: #CD5334;
+}
+
 button {
     background-color: #CD5334;
     color: #fff;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 .edit-form-container {
