--- a/src/app/crm-app/contact-details/contact-details.component.html
+++ b/src/app/crm-app/contact-details/contact-details.component.html
@@ -1,14 +1,16 @@
 <section class="details-container">
     <h2 class="p-2"><i class="fas fa-tasks mr-2"></i>Contact Tasks</h2>
     <h3 class="p-2" routerLink="/crm"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Contacts</h3>
-    <div class="contact p-4">
-        <h4>{{ contact.firstName }} {{ contact.lastName}}</h4>
-        <!-- <h4>Phone</h4>
-        {{ contact.phone }}
-        <h4>Fax</h4>
-        {{ contact.fax }}
-        <h4>Email</h4>
-        {{ contact.email }} -->
+    <div class="contact p-4 d-flex flex-row">
+        <div class="contact-name">
+            <h4>{{ contact.firstName }} {{ contact.lastName}}</h4>
+            <p>{{ contact.company }}</p>
+        </div>
+        <div class="contact-info">
+            <p>P: {{ contact.phone }}</p>
+            <p>F: {{ contact.fax }}</p>
+            <p>E: {{ contact.email }}</p>
+        </div>
     </div>
     <div class="task-form-container">
         <form class="container d-flex flex-row justify-content-around align-items-center" [formGroup]="taskForm" (ngSubmit)="onSubmit()">
@@ -22,14 +24,22 @@
     <div class="task-container p-2">
         <h3 class="ml-4 mt-3">Tasks</h3>
         <ul class="list-group list-group-flush" *ngIf="tasks.length > 0">
-            <li class="list-group-item" *ngFor="let t of tasks; let i = index">
+            <li class="list-group-item" *ngFor="let t of tasks; let i = index;">
                 <div class="d-flex flex-row align-items-center">
-                    <!-- <input type="checkbox" class="checkbox mr-2" (click)="completeTask(i)"> -->
-                    <span class="mt-1 mr-3">{{ t.date | date }}</span>
+                    <input type="checkbox" class="checkbox mr-2" (click)="completeTask(t, i)">
+                    <span class="mt-1 mr-3">{{ t.date | date:'M/dd' }}</span>
                     <span class="flex-grow-1 mt-1 task">{{ t.task }}</span>
                     <i class="far fa-edit m-2" (click)="edit(i)"></i>
                     <i class="far fa-trash-alt m-2" (click)="delete(i)"></i>
                 </div>
+            </li>
+        </ul>
+    </div>
+    <div class="task-container p-2">
+        <h3 class="ml-4 mt-3">Completed</h3>
+        <ul class="list-group list-group-flush" *ngIf="completedTasks.length > 0">
+            <li class="list-group-item" *ngFor="let c of completedTasks; let i = index;">
+                {{ c.task }}
             </li>
         </ul>
     </div>
