--- a/src/app/crm-app/crm-app.component.css
+++ b/src/app/crm-app/crm-app.component.css
@@ -31,15 +31,36 @@ button {
     margin-top: 10px;
 }
 
+.search-box-container {
+    max-width: 400px;
+    margin: 0px auto;
+}
+
 .edit-form-container {
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     width: 100%;
-    height: 90%;
+    height: 100%;
     top: 0;
 }
 
 .edit-form {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    width: 100%;
+    padding-bottom: 1em;
+    max-width: 500px;
+}
+
+.indev-container {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.indev {
     background-color: rgba(0, 0, 0, 0.9);
     color: #fff;
     width: 100%;
