--- a/src/app/crm-app/contact-details/contact-details.component.css
+++ b/src/app/crm-app/contact-details/contact-details.component.css
@@ -6,6 +6,8 @@ h2 {
 .contact {
     max-width: 500px;
     margin: 0px auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .task-form-container {
@@ -26,8 +28,20 @@ h2 {
     cursor: pointer;
 }
 
+.checkbox {
+    width: 25px;
+    height: 25px;
+}
+
 button {
     background-color: #CD5334;
     color: #fff;
     margin-top: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+    .contact {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
