--- a/src/app/crm-app/contact-details/contact-details.component.html
+++ b/src/app/crm-app/contact-details/contact-details.component.html
@@ -1,15 +1,15 @@
 <section class="details-container">
     <h2 class="p-2"><i class="fas fa-tasks mr-2"></i>Contact Tasks</h2>
     <h3 class="p-2" routerLink="/crm"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Contacts</h3>
-    <div class="contact p-4 d-flex flex-row">
+    <div class="contact p-4">
         <div class="contact-name">
             <h4>{{ contact.firstName }} {{ contact.lastName}}</h4>
             <p>{{ contact.company }}</p>
         </div>
         <div class="contact-info">
-            <p>P: {{ contact.phone }}</p>
-            <p>F: {{ contact.fax }}</p>
-            <p>E: {{ contact.email }}</p>
+            <p *ngIf="contact.phone.length > 3">Phone: ({{ contact.phone | slice:0:3 }}) {{ contact.phone | slice:3:6 }}-{{ contact.phone | slice:6:10 }}</p>
+            <p *ngIf="contact.fax.length > 3">Fax: ({{ contact.fax | slice:0:3 }}) {{ contact.fax | slice:3:6 }}-{{ contact.fax | slice:6:10 }}</p>
+            <p *ngIf="contact.email.length > 3">Email: {{ contact.email }}</p>
         </div>
     </div>
     <div class="task-form-container">
