Added hover to i and some inputs. Changed To-Do list heading to the name of the To-Do.

--- a/src/app/todo-app/todo-app.component.css
+++ b/src/app/todo-app/todo-app.component.css
@@ -37,6 +37,10 @@ button {
     font-size: 20px;
 }
 
+.popup-container i:hover {
+    cursor: pointer;
+}
+
 .group:hover {
     cursor: pointer;
 }
