--- a/src/app/todo-app/todo-app.component.html
+++ b/src/app/todo-app/todo-app.component.html
@@ -1,5 +1,5 @@
 <section class="todo-container">
-    <h2 class="p-2"><i class="fas fa-clipboard-check mr-2"></i>Todo App</h2>
+    <h2 class="p-2"><i class="fas fa-clipboard-check mr-2"></i>To-Do App</h2>
     <div class="form-container">
         <h3 *ngIf="user != null">Welcome, {{ user.name }}</h3>
         <h3 class="ml-4 mt-3">Add To-Do Group</h3>
@@ -31,7 +31,7 @@
         <!-- <div class="arrow">
             <i class="fas fa-location-arrow"></i>
         </div> -->
-        <div class="popup-container p-2 d-flex flex-column">
+        <div class="popup-container p-2 d-flex flex-column" *ngIf="user == null">
             <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i>
             <div>
                 <h3>You're not signed in!</h3>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="popup-bottom-container d-flex flex-column justify-content-center align-items-center" *ngIf="user != null && popup">
+    <!-- <div class="popup-bottom-container d-flex flex-column justify-content-center align-items-center" *ngIf="user != null && popup">
         <div class="popup-container p-2 d-flex flex-column">
             <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i>
             <div>
@@ -47,5 +47,5 @@
                 <p>Backend has been implemented. There still may be errors.</p>
             </div>
         </div>
-    </div>
+    </div> -->
 </section>
