--- a/src/app/todo-app/todo/todo.component.html
+++ b/src/app/todo-app/todo/todo.component.html
@@ -1,11 +1,11 @@
 <section class="todo-container">
-    <h2 class="p-2"><i class="fas fa-list-ul mr-2"></i>To-Do List</h2>
-    <h3 class="p-2" routerLink="/todo"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Groups</h3>
+    <h2 class="p-2"><i class="fas fa-list-ul mr-2"></i>{{ group }} Group</h2>
+    <h3 class="p-2 back" routerLink="/todo"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Groups</h3>
     <div class="form-container">
-        <h3 class="ml-4 mt-3">Add To-Do To "{{ group }}"</h3>
+        <h3 class="ml-4 mt-3">Add To-Do</h3>
         <form class="container d-flex flex-row justify-content-around align-items-center" [formGroup]="todoForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
-                <label for="groupName">Todo Name</label>
+                <label for="groupName">To-Do Name</label>
                 <input type="text" class="form-control" formControlName="todoItem">
             </div>
             <button type="submit" class="btn">Submit</button>
@@ -19,7 +19,7 @@
         </div>
         <ul class="list-group list-group-flush" *ngIf="todoItems.length > 0">
             <li class="list-group-item" *ngFor="let item of todoItems; let i = index;">
-                <div class="d-flex flex-row align-items-center">
+                <div class="d-flex flex-row align-items-center todo">
                     <input type="checkbox" class="checkbox mr-2" (click)="completeTodo(item, i)">
                     <span class="flex-grow-1 mt-1">{{ item.todo }}</span>
                     <i class="far fa-edit m-2" (click)="edit(item, i)"></i>
