--- a/src/app/crm-app/crm-app.component.css
+++ b/src/app/crm-app/crm-app.component.css
@@ -8,6 +8,10 @@ h2 {
     margin: 0px auto;
 }
 
+.fa-plus-square:hover {
+    cursor: pointer;
+}
+
 .contact-container {
     max-width: 500px;
     margin: 0px auto;
@@ -58,6 +62,10 @@ button {
     width: 100%;
     height: 100%;
     top: 0;
+}
+
+.indev-container i:hover {
+    cursor: pointer;
 }
 
 .indev {
